# bettercursor

./: .gitignore  AGENTS.md  BACKGROUND.md  CLAUDE.md  PRD.md  README.md  README.zh-CN.md  SYNC_DESIGN.md  TAURI_RUST_PLAN.md  goal.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vitest.config.ts
.github/: copilot-instructions.md
.github/workflows/: release.yml
adapter/: fix_orphan_sessions.py
bettercursor/: blob_dag.py  conflict.py  layer2.py  layer3.py  paths.py  snapshot.py  storage.py
docs/: README.md
scripts/: apply.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: canonical.rs  config.rs  conflict.rs  device_identity.rs  discovery.rs  inject.rs  layer2_messages.rs  mod.rs  path_rewrite.rs  paths.rs  process.rs  session_origin.rs  snapshot.rs  storage.rs  sync.rs  sync_loop.rs  transport_pull.rs  unified.rs  watcher.rs
src-tauri/src/core/transport/: config.rs  lan.rs  mod.rs  outbox.rs  snapshot.rs  snapshot_meta.rs  ssh.rs  trusted_peers.rs
src-tauri/tests/fixtures/: fake-rsync.sh  fake-ssh.sh
src/components/: BrokenBadge.test.tsx  BrokenBadge.tsx  BubbleView.tsx  ConflictResolveDialog.tsx  ConflictResolvePanel.tsx  LanguageSwitcher.tsx  MessageList.tsx  SessionDetail.tsx  SessionTree.tsx  SettingsButton.tsx  SettingsDialog.tsx  SourceBadge.tsx  SyncNowButton.tsx  SyncPeersDialog.tsx  SyncPeersPanel.tsx  SyncStatusBadge.tsx  (+1 more)
tests/: CROSS_DEVICE_E2E.md  test_apply_atomic_rename.py  test_layer2_import.py
(+13 files in other folders)
