[package]
name = "bettercursor"
version = "0.3.5"
description = "Tauri + Rust read-only viewer for local Cursor sessions"
authors = ["Eric Shen"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "bettercursor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
dirs = "5"
home = "0.5"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
walkdir = "2"
tempfile = "3"
md5 = "0.7"
notify = { version = "6" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
mdns-sd = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
